app-test/testdata/typesystem/neg/type-construction-arg-type/check/cons.check
Error in "testdata/typesystem/neg/type-construction-arg-type/src/cons.cal" on line 5:
           OUT <-- T(1, 2.5); // error
                        ^^^
Incompatible types; expected bool but was real(32).